Object_Profile/objects/Apttus_Config2__ProductAttributeValue__c.object
<CustomObject>
    <fields>
        <fullName>Calculated_Price_Formula__c</fullName>
        <formula>IF((TEXT(Contract_Type__c) == &apos;Perpetual&apos; &amp;&amp; TEXT(Revenue_Stream_Type__c) == &apos;Additional Licenses&apos;),(Megawatts__c * 75) ,IF((TEXT(Contract_Type__c) == &apos;Perpetual&apos; &amp;&amp; TEXT(Revenue_Stream_Type__c) == &apos;New Product&apos;),(50000 + Megawatts__c * 75),IF((TEXT(Contract_Type__c) == &apos;Subscription&apos; &amp;&amp; TEXT(Revenue_Stream_Type__c) == &apos;Additional Licenses&apos;),(Megawatts__c * 40),IF((TEXT(Contract_Type__c) == &apos;Subscription&apos; &amp;&amp; TEXT(Revenue_Stream_Type__c) == &apos;New Product&apos;),(25000 + Megawatts__c * 40),0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Price Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Price__c</fullName>
        <label>Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>New Support Package</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Funded_Development__c</fullName>
        <description>CPQ- For Maintenance Products</description>
        <label>Customer Funded Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESS_Use_Named_User__c</fullName>
        <label>ESS Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Use_Named_User__c</fullName>
        <label>Full Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWh_of_Retail__c</fullName>
        <label>GWh of Retail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401 – 880</fullName>
                </value>
                <value>
                    <fullName>251 – 400</fullName>
                </value>
                <value>
                    <fullName>&lt; 250</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Metric_Customer_Count__c</fullName>
        <label>License Metric - Customer Count</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Metric_MineScape__c</fullName>
        <inlineHelpText>Please select License Metric attribute value</inlineHelpText>
        <label>License Metric - MineScape</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                    <default>true</default>
                    <label>Named User</label>
                </value>
                <value>
                    <fullName>Session User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limited_Use_Named_User__c</fullName>
        <label>Limited Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Zones__c</fullName>
        <label>Load Zones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MW_of_Generation__c</fullName>
        <label>MW of Generation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2751 – 5000</fullName>
                </value>
                <value>
                    <fullName>1251 – 2750</fullName>
                </value>
                <value>
                    <fullName>426 – 1250</fullName>
                </value>
                <value>
                    <fullName>151 – 425</fullName>
                </value>
                <value>
                    <fullName>76 – 150</fullName>
                </value>
                <value>
                    <fullName>&lt; 75</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Megawatts__c</fullName>
        <label>Megawatts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named_Users__c</fullName>
        <description>EPM  product Named Users entered by user</description>
        <label>Named Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Assets__c</fullName>
        <label>Number of Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Optimization_Type__c</fullName>
        <label>Portfolio Optimization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                    <default>true</default>
                    <label>Base</label>
                </value>
                <value>
                    <fullName>Increment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Sub_Type__c</fullName>
        <label>Revenue Stream Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Cyber Security</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>New Logo</fullName>
                </value>
                <value>
                    <fullName>Organizational Change Management</fullName>
                </value>
                <value>
                    <fullName>Reporting Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Partner Lead Services</fullName>
                </value>
                <value>
                    <fullName>Partner Subcontract Services</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Type__c</fullName>
        <label>Revenue Stream Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Licenses</fullName>
                </value>
                <value>
                    <fullName>Additional Licenses/Services</fullName>
                </value>
                <value>
                    <fullName>Adoption Services</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Customer Funded Development</fullName>
                </value>
                <value>
                    <fullName>Delivery Services</fullName>
                </value>
                <value>
                    <fullName>Extension (+1 or +2 option)</fullName>
                </value>
                <value>
                    <fullName>Extension (other)</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Integration &amp; Reporting Services</fullName>
                </value>
                <value>
                    <fullName>IT Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Mix of Options</fullName>
                </value>
                <value>
                    <fullName>Net New Service</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Partner Services</fullName>
                </value>
                <value>
                    <fullName>Product Optimization Package</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Support Packages</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sites_Deployed__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sites Deployed (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <label>Tenancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi-Tenant</fullName>
                </value>
                <value>
                    <fullName>Sole Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>